# stackfolder

./: CMakeLists.txt  Messages.sh  dialog.cpp  dialog.h  directory.cpp  directory.h  dirlister.cpp  dirlister.h  dirmodel.cpp  dirmodel.h  file.cpp  file.h  iconwidget.cpp  iconwidget.h  imageprovider.cpp  imageprovider.h  plasma-applet-stackfolder.desktop  previewgenerator.cpp  previewgenerator.h  proxymodel.cpp  proxymodel.h  stackfolder.cpp  stackfolder.h  viewer.cpp  viewer.h
package/contents/ui/: Button.qml  Delegate.qml  ScrollBar.qml  main.qml
